log

Tue 15 Aug 2023 08:13:52 PM UTC: 
 tests:  0|7
total_score: 0/70
96f4db7
Tue 15 Aug 2023 08:29:55 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
228e3c9
Tue 15 Aug 2023 08:45:31 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d2a6bc8
Tue 15 Aug 2023 08:48:28 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
d324a08
Tue 15 Aug 2023 08:54:32 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:7: error: array size missing in ‘newArr’
   48 |   int newArr[];
      |       ^~~~~~
exercises.c:55:10: error: function returns address of local variable [-Werror=return-local-addr]
   55 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7da0a25
Tue 15 Aug 2023 08:54:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:10: error: function returns address of local variable [-Werror=return-local-addr]
   55 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
58c16a9
Tue 15 Aug 2023 08:55:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:16: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   55 |   return newArr[(*newSize)];
      |          ~~~~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74bddc3
